# gym-burn

./: .gitignore  Cargo.toml  conv.rs  simple_plot.py  working_out.md
.cargo/: config.toml
general-dataset/: Cargo.toml
general-dataset-tools/: Cargo.toml
general-dataset-tools/src/: main.rs
general-dataset/src/: burn_dataset.rs  cache.rs  image_gen.rs  lib.rs  main.rs  presets.rs
general-dataset/src/presets/: autoencoder.rs
general-models/: Cargo.toml
general-models/src/: autoencoder.rs  common.rs  composite.rs  conv.rs  error.rs  lib.rs  linear.rs  loss.rs  recurrent.rs  serde_fix.rs
general-models/src/composite/: autoencoder.rs  image.rs
general-models/src/composite/autoencoder/: decoder.rs  vae.rs
general-models/src/recurrent/: grus.rs
general-training/: Cargo.toml  Cargo.toml.ignored
general-training/src/: app.rs  batches.rs  dataset.rs  lib.rs  main.rs  regression.rs  training_loop.rs
general-training/src/app/: config.rs  infer_plans.rs  training_plans.rs
isthatarock/handwritten/: Cargo.toml  requirements.txt  simple_plot.py
isthatarock/handwritten-tools/: Cargo.toml  ae-model.mpk  vae-model.mpk
isthatarock/handwritten-tools/handwritten-cluster/: Cargo.toml
isthatarock/handwritten-tools/handwritten-cluster/src/: cluster.rs  main.rs
isthatarock/handwritten-tools/handwritten-edgeproc/: Cargo.toml
isthatarock/handwritten-tools/handwritten-edgeproc/src/: main.rs
isthatarock/handwritten-tools/handwritten-heatmap/: Cargo.toml
isthatarock/handwritten-tools/handwritten-heatmap/src/: main.rs
isthatarock/handwritten-tools/handwritten-infer/: Cargo.toml
isthatarock/handwritten-tools/handwritten-infer/src/: main.rs
isthatarock/handwritten-tools/handwritten-pca/: Cargo.toml
isthatarock/handwritten-tools/handwritten-pca/src/: main.rs
isthatarock/handwritten-tools/handwritten-viz/: Cargo.toml
isthatarock/handwritten-tools/handwritten-viz/src/: main.rs
isthatarock/handwritten-tools/src/: main.rs
isthatarock/handwritten/handwritten-dataset/: Cargo.toml
isthatarock/handwritten/handwritten-dataset/src/: main.rs
isthatarock/handwritten/handwritten-model/: Cargo.toml
isthatarock/handwritten/handwritten-model/src/: lib.rs
isthatarock/handwritten/handwritten-training/: Cargo.toml
isthatarock/handwritten/handwritten-training/src/: data.rs  main.rs  model.rs
isthatarock/handwritten/src/: app.rs  lib.rs  main.rs  pca.rs
isthatarock/isthatarock-model/: Cargo.toml
isthatarock/isthatarock-training/: Cargo.toml
model-configs/isthatarock/handwritten/: get-test-data.sql  model.jsonc  test-data.json  training-data.json  training.json  training.jsonc
model-configs/isthatarock/handwritten-vae/: get-test-data.sql  get-training-data.sql  model.jsonc  training-data.json  training.json  training.jsonc
proximo/: Cargo.toml
proximo-rerun/: Cargo.toml
proximo-rerun/src/: main.rs
proximo/src/: app.rs  lib.rs  main.rs  trainable_models.rs  training_loop.rs
proximo/src/app/: config.rs  loss.rs  presets.rs
proximo/src/app/presets/: autoencoders.rs
proximo/src/trainable_models/: apply_gradients.rs  vae.rs
proximo/src/trainable_models/apply_gradients/: autoencoder.rs  conv.rs  image.rs  linear.rs  lr_scheduler.rs  optimizer.rs
proximo/src/training_loop/: presets.rs
tracking-backend/: Cargo.toml
tracking-backend-tool/: Cargo.toml
tracking-backend-tool/src/: main.rs
tracking-backend/src/: implementations.rs  lib.rs  tracking.rs
tracking-backend/src/implementations/: autodiff.rs
utils/: Cargo.toml
utils/src/: lib.rs
waffle/: Cargo.toml
waffle/src/: main.rs
wgpu-inference/: Cargo.toml
wgpu-inference/src/: lib.rs
