[workspace]
resolver = "3"
members = [ "general-dataset", "general-models", "general-training"]

[workspace.dependencies]
wgpu-inference.path = "wgpu-inference"
general-models.path = "general-models"

rustc-hash = "2.1.1"
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["std", "fusion", "openblas", "ndarray"], default-features = false }
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
image = { version = "0.24", default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
linfa = "0.7.1"
clap = { version = "4.5.48", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
