[workspace]
resolver = "3"
members = [ "general-dataset", "general-models", "general-training", "isthatarock/handwritten", "utils"]

[workspace.dependencies]
general-models.path = "general-models"
utils.path = "utils"

rustc-hash = "2.1.1"
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["std", "fusion", "ndarray"], default-features = false }
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
image = { version = "0.25", default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
linfa = "0.7.1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde_json = "1.0.145"
json_comments = "0.2.2"
thiserror = "2.0.17"
imageproc = "0.25.0"
