[package]
name = "general-models"
version = "0.1.0"
edition = "2024"

[dependencies]
burn.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[features]
wgpu = ["burn/wgpu"]
rocm = ["burn/rocm"]
cuda = ["burn/cuda"]
openblas = ["burn/openblas"]
openblas-system = ["burn/openblas-system"]
macos = ["burn/accelerate"]