[package]
name = "general-models"
version = "0.1.0"
edition = "2024"

[dependencies]
burn.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
utils.workspace = true
delegate = "0.13.4"
derive_more = "2.0.1"

[features]
wgpu = ["burn/wgpu"]
rocm = ["burn/rocm"]
cuda = ["burn/cuda"]
openblas = ["burn/openblas"]
openblas-system = ["burn/openblas-system"]
macos = ["burn/accelerate"]
