[package]
name = "general-training"
version = "0.1.0"
edition = "2024"

[dependencies]
general-models.workspace = true
burn = { workspace = true, features = ["train"] }
image.workspace = true
serde.workspace = true
rusqlite = { version = "0.37.0", features = ["bundled"] }
unfmt = "0.2.2"
crossbeam = "0.8.4"
serde_json = "1.0.145"

[features]
tui = ["burn/tui"]
wgpu = ["general-models/wgpu"]
app = ["tui"]
default = ["app", "wgpu"]
