[package]
name = "proximo"
version = "0.1.0"
edition = "2024"

[dependencies]
general-models.workspace = true
general-dataset.workspace = true
burn = { workspace = true, features = [] }
image = { workspace = true, features = ["webp"] }
utils.workspace = true
clap = { workspace = true, optional = true }
rand.workspace = true
quanta = "0.12.6"
serde.workspace = true
serde_json = { workspace = true, optional = true }
rayon.workspace = true
rusqlite.workspace = true
tracing-subscriber = { version = "0.3.20", optional = true }
# delegate = "0.13.4"
# derive_more = "2.0.1"

[features]
wgpu = ["general-models/wgpu"]
rocm = ["general-models/rocm"]
cuda = ["general-models/cuda"]
app = ["clap", "tracing-subscriber", "wgpu"]
default = ["app"]
macos = ["general-models/macos"]
