[package]
name = "proximo"
version = "0.1.0"
edition = "2024"

[dependencies]
general-models.workspace = true
general-dataset.workspace = true
burn = { workspace = true, features = ["autodiff"] }
# image = { workspace = true, features = ["webp"] }
utils.workspace = true
clap = { workspace = true, optional = true }
rand.workspace = true
quanta = { version = "0.12.6", optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
rayon.workspace = true
# rusqlite = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
tracing = "0.1.41"
# delegate = "0.13.4"
# derive_more = "2.0.1"

[features]
wgpu = ["general-models/wgpu"]
rocm = ["general-models/rocm"]
cuda = ["general-models/cuda"]
app = ["clap", "tracing-subscriber", "wgpu", "serde_json", "quanta"]
default = ["app"]
macos = ["general-models/macos"]
