[package]
name = "tracking-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, features = ["cubecl", "wgpu"] }
# cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, features = ["wgpu", "std"], rev = "a2ba01a0a1c1c95efbde42f1cd4f5ab1831a7708" }