[package]
name = "waffle"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, features = ["tui", "train", "fusion"] }
general-models = { workspace = true, features = ["wgpu"] }
general-dataset = { workspace = true, features = ["burn_dataset"] }
utils.workspace = true
serde.workspace = true
rand.workspace = true
image = { workspace = true, features = ["webp"] }