[workspace]
resolver = "3"
members = ["handwritten-cluster", "handwritten-infer", "handwritten-pca", "handwritten-viz"]
exclude = []

[workspace.dependencies]
handwritten.path = "../handwritten"
general-models = { path = "../../general-models", features = ["wgpu"] }
utils.path = "../../utils"
general-dataset.path = "../../general-dataset"

clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
efficient_pca = { version = "0.1.8", default-features = false, features = ["backend_faer"] }
ndarray = { version = "0.16.1", features = ["serde"] }

[profile.release]
strip = false
debug = true
lto = false
incremental = true
codegen-units = 256

# [profile.dev]
# opt-level = 3