[package]
name = "handwritten-training"
version = "0.1.0"
edition = "2024"

[dependencies]
handwritten-model.path = "../handwritten-model"
burn = { workspace = true, features = ["tui", "train", "sqlite", "wgpu"] }
image.workspace = true
serde.workspace = true
rusqlite = { version = "0.37.0", features = ["bundled"] }
md5 = "0.8.0"
rayon = "1.11.0"
crossbeam = "0.8.4"
hex = "0.4.3"
linfa.workspace = true
linfa-clustering = "0.7.1"
ndarray = "0.15.6"
