[package]
name = "handwritten-training"
version = "0.1.0"
edition = "2024"

[dependencies]
handwritten-model.path = "../handwritten-model"
burn = { workspace = true, features = ["tui", "train", "sqlite", "wgpu"] }
image.workspace = true
serde.workspace = true
linfa.workspace = true
linfa-clustering = "0.7.1"
ndarray = "0.15.6"
